tests/out/error/struct/required_field.out
tests/out/error/struct/required_field.in.bt:10:9 error: field "Spam.n" requires initialization
tests/out/error/struct/required_field.in.bt:14:10 error: field "Spam.eggs" requires initialization
